// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> <Icon /> icon attributes should render the password icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-eye fa-w-18 sc-bdVaJa bDWFJH"
  data-icon="eye"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 576 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<Icon /> <Icon /> icon attributes should render the search icon 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-search fa-w-16 sc-bdVaJa bDWFJH"
  data-icon="search"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;
